@@ -1,3 +1,8 @@
+2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-int.el (gnus-open-server): Make the "denied" message clearer
+	(bug#9225).
+
 2011-09-10  Eli Zaretskii  <eliz@gnu.org>
 
 	Add autoload cookies for functions used by sendmail.el.
